--- a/src/components/Cards/Cards.module.css
+++ b/src/components/Cards/Cards.module.css
@@ -3,19 +3,19 @@
 }
 
 .card {
-    margin: 0 2% !important;
+    margin: 3% 2% !important;
 }
 
-.infected {
-    border-bottom: 100px solid rgba(0, 0, 255, 0.5);
+.card.infected {
+    border-bottom: 10px solid rgba(0, 0, 255, 0.5);
 }
 
 .recovered {
-    border-bottom: 100px solid rgba(0, 255, 0, 0.5);
+    border-bottom: 10px solid rgba(0, 255, 0, 0.5);
 }
 
 .deaths {
-    border-bottom: 100px solid rgba(255, 0, 0, 0.5);
+    border-bottom: 10px solid rgba(255, 0, 0, 0.5);
 }
 
 @media (max-width: 770px) {
